# rust-fullstack

./: Cargo.toml
backend/: Cargo.toml
common/: Cargo.toml
