[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
rocket_sync_db_pools = { version = "0.1", features = ["postgres"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
common = { version = "0.1.0", path = "../common" }